# depthai-core-example

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
